[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "rust-patterns", "no-std"]
description = "A fast bump allocation arena for Rust."
documentation = "https://docs.rs/bumpalo"
edition = "2018"
license = "MIT/Apache-2.0"
name = "bumpalo"
readme = "./README.md"
repository = "https://github.com/fitzgen/bumpalo"
version = "3.2.1"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
required-features = ["collections"]

[dependencies]
alloc-wg = { git = "https://github.com/TimDiekmann/alloc-wg" }

[dev-dependencies]
quickcheck = "0.9.0"
criterion = "0.3.0"

[features]
default = []

# [profile.bench]
# debug = true
